[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/ZeroFrame/ZeroFrame_ui.gd" type="Script" id=1]
[ext_resource path="res://addons/ZeroFrame/ZN_picture.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=2]

bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=3]

bg_color = Color( 0.588235, 0.372549, 0.976471, 0.537255 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=4]

bg_color = Color( 0.588235, 0.372549, 0.976471, 0.145098 )

[node name="ZeroFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0862745, 0.0980392, 1 )

[node name="scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 308 )

[node name="VBoxContainer" type="VBoxContainer" parent="scroll"]
margin_right = 300.0
margin_bottom = 735.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2

[node name="Control" type="Control" parent="scroll/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="CenterContainer" type="CenterContainer" parent="scroll/VBoxContainer"]
editor/display_folded = true
margin_top = 44.0
margin_right = 300.0
margin_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="scroll/VBoxContainer/CenterContainer"]
editor/display_folded = true
margin_left = 85.0
margin_right = 214.0
margin_bottom = 50.0

[node name="Control" type="Control" parent="scroll/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="TextureRect" type="TextureRect" parent="scroll/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 94.0
margin_bottom = 50.0
texture = ExtResource( 2 )

[node name="version" type="Label" parent="scroll/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 98.0
margin_top = 10.0
margin_right = 129.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
custom_colors/font_color = Color( 0.709804, 0.462745, 0.913725, 1 )
text = "v 0.1"
valign = 2

[node name="Label5" type="Label" parent="scroll/VBoxContainer"]
margin_top = 98.0
margin_right = 300.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 30 )
custom_colors/font_color = Color( 0.678431, 0.443137, 0.929412, 1 )
text = "Official ZeroFrame Addon"
align = 1
valign = 1

[node name="Control3" type="Control" parent="scroll/VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )

[node name="Label" type="Label" parent="scroll/VBoxContainer"]
margin_top = 176.0
margin_right = 300.0
margin_bottom = 190.0
text = " Site address"

[node name="site_address_edit" type="LineEdit" parent="scroll/VBoxContainer"]
margin_top = 194.0
margin_right = 300.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 30 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"
align = 1
placeholder_text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"

[node name="Control2" type="Control" parent="scroll/VBoxContainer"]
margin_top = 228.0
margin_right = 300.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 20 )

[node name="Label2" type="Label" parent="scroll/VBoxContainer"]
margin_top = 252.0
margin_right = 300.0
margin_bottom = 266.0
text = " ZeroNet Address"

[node name="zeronet_address_edit" type="LineEdit" parent="scroll/VBoxContainer"]
margin_top = 270.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 30 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "127.0.0.1"
align = 1
placeholder_text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"

[node name="Control4" type="Control" parent="scroll/VBoxContainer"]
margin_top = 304.0
margin_right = 300.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 20 )

[node name="Label3" type="Label" parent="scroll/VBoxContainer"]
margin_top = 328.0
margin_right = 300.0
margin_bottom = 342.0
text = " ZeroNet Port"

[node name="zeronet_port_edit" type="LineEdit" parent="scroll/VBoxContainer"]
margin_top = 346.0
margin_right = 300.0
margin_bottom = 376.0
rect_min_size = Vector2( 0, 30 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "43110"
align = 1
placeholder_text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"

[node name="Control5" type="Control" parent="scroll/VBoxContainer"]
margin_top = 380.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="scroll/VBoxContainer"]
margin_top = 404.0
margin_right = 300.0
margin_bottom = 424.0

[node name="Label4" type="Label" parent="scroll/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 164.0
margin_bottom = 17.0
text = "Max In/Max Out Buffer Kb"

[node name="buffer_kb_button" type="Button" parent="scroll/VBoxContainer/HBoxContainer2"]
margin_left = 168.0
margin_right = 186.0
margin_bottom = 20.0
custom_colors/font_color_hover = Color( 0.541176, 0.321569, 0.72549, 1 )
text = "?"
flat = true

[node name="buffer_explanation" type="Label" parent="scroll/VBoxContainer"]
visible = false
margin_top = 428.0
margin_right = 581.0
margin_bottom = 533.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 105 )
custom_colors/font_color = Color( 1, 1, 1, 0.278431 )
text = "Godot's default Websocket Buffer is very small (16Kb). This represents the max file size you can store/receive in ZeroNet. You are advised to raise this limit to suit your needs. At least 5MB (5120 Kb) recommended."
valign = 1
autowrap = true

[node name="center" type="CenterContainer" parent="scroll/VBoxContainer"]
margin_top = 428.0
margin_right = 300.0
margin_bottom = 458.0

[node name="HBoxContainer" type="HBoxContainer" parent="scroll/VBoxContainer/center"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="max_in" type="LineEdit" parent="scroll/VBoxContainer/center/HBoxContainer"]
margin_right = 148.0
margin_bottom = 30.0
rect_min_size = Vector2( 148, 30 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "4096"
align = 1
placeholder_text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"

[node name="max_out" type="LineEdit" parent="scroll/VBoxContainer/center/HBoxContainer"]
margin_left = 152.0
margin_right = 300.43
margin_bottom = 30.0
rect_min_size = Vector2( 148.43, 20 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "4096"
align = 1
placeholder_text = "1HeLLo4uzjaLetFx6NH3PMwFP3qbRbTf3D"

[node name="Control9" type="Control" parent="scroll/VBoxContainer"]
margin_top = 462.0
margin_right = 300.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 10 )

[node name="automatic_limit" type="CheckBox" parent="scroll/VBoxContainer"]
margin_top = 476.0
margin_right = 300.0
margin_bottom = 500.0
rect_min_size = Vector2( 183.02, 20 )
custom_colors/font_color_pressed = Color( 0.588235, 0.372549, 0.976471, 1 )
button_mask = 7
text = "set limit automatically"
flat = true

[node name="Control6" type="Control" parent="scroll/VBoxContainer"]
margin_top = 504.0
margin_right = 300.0
margin_bottom = 537.28
rect_min_size = Vector2( 0, 33.28 )

[node name="CenterContainer2" type="CenterContainer" parent="scroll/VBoxContainer"]
margin_top = 541.0
margin_right = 300.0
margin_bottom = 571.0

[node name="defaults_button" type="Button" parent="scroll/VBoxContainer/CenterContainer2"]
margin_left = 60.0
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 180, 30 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.588235, 0.372549, 0.976471, 1 )
text = "RESET SETTINGS"

[node name="Control7" type="Control" parent="scroll/VBoxContainer"]
margin_top = 575.0
margin_right = 300.0
margin_bottom = 683.66
rect_min_size = Vector2( 0, 108.66 )

[node name="CenterContainer3" type="CenterContainer" parent="scroll/VBoxContainer"]
margin_top = 687.0
margin_right = 300.0
margin_bottom = 701.0

[node name="connection_status" type="Label" parent="scroll/VBoxContainer/CenterContainer3"]
margin_left = 60.0
margin_right = 240.0
margin_bottom = 14.0
rect_min_size = Vector2( 180, 0 )

[node name="CenterContainer4" type="CenterContainer" parent="scroll/VBoxContainer"]
margin_top = 705.0
margin_right = 300.0
margin_bottom = 735.0
rect_min_size = Vector2( 180, 25 )

[node name="check_button" type="Button" parent="scroll/VBoxContainer/CenterContainer4"]
margin_left = 60.0
margin_right = 240.0
margin_bottom = 30.0
rect_min_size = Vector2( 180, 30 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.588235, 0.372549, 0.976471, 1 )
text = "CHECK CONNECTION"

[connection signal="text_changed" from="scroll/VBoxContainer/site_address_edit" to="." method="_on_site_address_edit_text_changed"]
[connection signal="text_changed" from="scroll/VBoxContainer/zeronet_address_edit" to="." method="_on_zeronet_address_edit_text_changed"]
[connection signal="text_changed" from="scroll/VBoxContainer/zeronet_port_edit" to="." method="_on_zeronet_port_edit_text_changed"]
[connection signal="pressed" from="scroll/VBoxContainer/HBoxContainer2/buffer_kb_button" to="." method="_on_buffer_kb_button_pressed"]
[connection signal="text_changed" from="scroll/VBoxContainer/center/HBoxContainer/max_in" to="." method="_on_max_in_text_changed"]
[connection signal="text_changed" from="scroll/VBoxContainer/center/HBoxContainer/max_out" to="." method="_on_max_out_text_changed"]
[connection signal="toggled" from="scroll/VBoxContainer/automatic_limit" to="." method="_on_automatic_limit_toggled"]
[connection signal="pressed" from="scroll/VBoxContainer/CenterContainer2/defaults_button" to="." method="_on_defaults_button_pressed"]
[connection signal="pressed" from="scroll/VBoxContainer/CenterContainer4/check_button" to="." method="_on_check_button_pressed"]
